== unreleased changes

* Updated future work in readme

== 0.0.6

* Added indices to the migration
* Updated the controller mixin to do a better job handling namespaced models
* Clarified how the route needs to be setup in the readme
* Changed the ordering of the default form partial in the controller mixin
* Updated index links partial to not use the locals hash directly

== 0.0.5

* Updated gem requirements

== 0.0.4

* Added controller and views generators

== 0.0.3

* Moved capybara and sqlite to development gems
* Added an all_errors partial
* Updated the commenting

== 0.0.2

* Updating the readme

== 0.0.1

* Initial work complete.  Everything theoretically works but the code and tests are rough.