@@ -1,6 +1,7 @@
 == unreleased changes
 
 * Updated future work in readme
+* Updated the behavior of the previous and next links to skip update pages
 
 == 0.0.6
 
